updated carousel - still facing an issue with z-index 3->2->1 fails, but everything else works as expected

--- a/src/components/layout/header/Header.scss
+++ b/src/components/layout/header/Header.scss
@@ -19,7 +19,9 @@
             font-size: 0;
             &::before {
                 content: 'PT';
+                // color: var(--color-default);
                 font-size: 1.5rem;
+                font-family: "Dela Gothic One";
             }
         }
     }
