--- a/src/components/layout/home/Home.scss
+++ b/src/components/layout/home/Home.scss
@@ -39,7 +39,32 @@
                     border-radius: 1rem;
                     background-color: var(--app-color-background-contrast);//light-dark(#fff, #000);
                     width: 100%;
-                    aspect-ratio: 2/1;
+                    aspect-ratio: 1.5/1;
+                    position: relative;
+                    > picture {
+                        position: absolute;
+                        inset: 0;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        overflow: hidden;
+
+
+                        > img {
+                            height: auto;
+                            width: auto;
+                            object-fit: cover;
+                            object-position: center;
+                            scale: 1;
+                            transition: .3s ease-in-out;
+                        }
+
+                        &:hover {
+                            > img {
+                                scale: 1.3;
+                            }
+                        }
+                    }
                 }
             }
             > li {
