--- a/src/components/layout/home/carousel/Carousel.scss
+++ b/src/components/layout/home/carousel/Carousel.scss
@@ -2,9 +2,9 @@
     &__card {
         --_transtion-duration: 400ms;
         --_animation-duration: calc(2 * var(--_transtion-duration));
-        --_allowed-rotation: 35deg;
+        --_allowed-rotation: 25deg;
         height: var(--_card-height);
-        width: min(400px, 100%);
+        width: min(40.625rem, 80%);
         background-color: rgb(255, 255, 255);
         border-radius: 1rem;
         box-shadow: var(--app-color-background-contrast) 0 4px;
@@ -15,20 +15,15 @@
         left: 50%;
         transform: translate(-50%, 0);
         transform-origin: bottom right;
-        transition: translate var(--_transtion-duration) linear;
+        // transform-origin: 50% 50% 0;
+        transition: margin var(--_transtion-duration) linear;
 
         display: flex;
         flex-wrap: wrap;
         place-content: center;
         place-items: center;
 
-        &[data-order] {
-            animation: shuffle var(--_animation-duration) linear forwards;
-        }
-
-        &[data-order='0'] {
-            animation: shuffle-active var(--_animation-duration) linear forwards;
-        }
+        
     }
     &__scroller {
         --_card-height: 15rem;
@@ -38,43 +33,66 @@
         width: 100%;
         height: var(--_card-height);
 
-        &.-noanimate {
+        &[data-animation-mode='none'] {
             > .app-tcarousel__card {
-                animation-duration: 0ms;
-                transition-duration: 0ms;
+                &[data-order] {
+                    animation: shuffle 0ms linear forwards;
+                }
+                &[data-order='0'] {
+                    animation: shuffle-active 0ms linear forwards;
+                }
+            }
+        }
+
+        &[data-animation-mode='forwards'] {
+            > .app-tcarousel__card {
+                &[data-order] {
+                    animation: shuffle var(--_animation-duration) linear forwards;
+                }
+                &[data-order='0'] {
+                    animation: shuffle-active var(--_animation-duration) linear forwards;
+                }
+            }
+        }
+
+        &[data-animation-mode='reverse'] {
+            > .app-tcarousel__card {
+                &[data-order] {
+                    animation: shuffle-prev var(--_animation-duration) linear forwards;
+                }
+                &[data-order='1'] {
+                    animation: shuffle-prev-active var(--_animation-duration) linear forwards;
+                }
             }
         }
     }
     &__control {
         & {
+            --_color: var(--color-contrast);
+            --_bg: var(--app-color-background-contrast);
             --_size: 1.25rem;
             --_icon: calc(var(--_size) * 0.8);
-            height: var(--_size);
-            width: var(--_size);
             border-radius: 50%;
-            border: 1px solid transparent;
+            border: 1px solid var(--_color);
             position: relative;
-            background-color: transparent;
+            background-color: var(--_bg);
+            padding: 0.25rem;;
             &::before {
                 content: '';
-                background-color: var(--color-default);
+                background-color: var(--_color);
                 mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='lucide lucide-arrow-big-left-dash'%3E%3Cpath d='M19 15V9'/%3E%3Cpath d='M15 15h-3v4l-7-7 7-7v4h3v6z'/%3E%3C/svg%3E") no-repeat center;
+                mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 256 256' style='flex-shrink: 0;'%3E%3Cg%3E%3Cpath d='M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
                 mask-size: var(--_icon);
                 height: var(--_icon);
                 width: var(--_icon);
                 display: block;
-                position: absolute;
-                inset: 50% auto auto 50%;
-                translate: -50% -50%;
             }
             &.-next {
                 rotate: 180deg
             }
             &:hover,
             &:focus-visible {
-                &::before {
-                    background-color: red;// var(--anchor-color-primary-active);
-                }
+                --_bg: light-dark(blueviolet, thistle);
             }
         }
         &s {
@@ -100,6 +118,10 @@
     }
     50% {
         rotate: var(--_allowed-rotation, 25deg);
+        z-index: var(--_old-zindex);
+    }
+    51% {
+        z-index: var(--_zindex);
     }
     100% {
         rotate: 0;
@@ -111,6 +133,45 @@
     from {
         rotate: 0;
         z-index: var(--_old-zindex);
+    }
+    50% {
+        z-index: var(--_old-zindex);
+    }
+    51% {
+        z-index: var(--_zindex);
+    }
+    to {
+        z-index: var(--_zindex);
+    }
+}
+
+@keyframes shuffle-prev-active {
+    0% {
+        z-index: var(--_old-zindex);
+    }
+    50% {
+        rotate: var(--_allowed-rotation, 25deg);
+        z-index: var(--_old-zindex);
+    }
+    51% {
+        z-index: var(--_zindex);
+    }
+    100% {
+        rotate: 0;
+        z-index: var(--_zindex);
+    }
+}
+
+@keyframes shuffle-prev {
+    from {
+        rotate: 0;
+        z-index: var(--_old-zindex);
+    }
+    50% {
+        z-index: var(--_old-zindex);
+    }
+    51% {
+        z-index: var(--_zindex);
     }
     to {
         z-index: var(--_zindex);
